[UPDATE] refactor and add new collection api
